[package]
name = "ao-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arweave-rs = { git = "https://github.com/Irys-xyz/arweave-rs" }
bundlr-sdk = "0.5.0"
ar-bundles = { path = "../ar-bundles" }
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json", "multipart"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
crypto = "0.5.1"
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.5"
bytes = "1.6.0"
base64-url = "2.0.2"
ring = "0.17.8"
async-trait = "0.1.80"
rsa = "0.9.6"
env_logger = "0.11.3"
jsonwebkey = "0.3.5"
