[package]
name = "arrs"
version = "0.1.9"
edition = "2021"
license = "LGPL-3.0-only"
description = "ARRS is a Rust API implementation of the Arweave client. It can be used to write command line, desktop, or web programs in Rust to use most features of Arweave, including creating, importing, and exporting wallets, checking balance, sending transactions, uploading files, etc.."
documentation = "https://docs.rs/arrs"
homepage = "https://gitlab.com/iceguye/arrs"
repository = "https://gitlab.com/iceguye/arrs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
base64ct = {version = "1.6.0", features = ["alloc"]}
reqwest = "0.11.23"
indexmap = {version = "2.1.0", features = ["serde"]}
openssl = { version = "0.10.62", features = ["vendored"] }
primitive-types = {version = "0.12.2", features = ["serde"]}
f256 = "0.2.0"