[package]
name = "cu"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cu"

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.6.0"
actix-web = { version = "4.5.1", features = ["openssl", "rustls-0_21"] }
actix-files = "0.6.5"
actix-multipart = "0.6.1"
arweave-rs = { git = "https://github.com/Irys-xyz/arweave-rs" }
bevy_reflect = "0.13.1"
chrono = { version = "0.4.35", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.3"
fake = { version = "2.9.2", features=['derive']}
futures = "0.3.30"
futures-util = "0.3.30"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
js-sys = "0.3.69"
lazy_static = "1.4.0"
log = "0.4.21"
mockall = "0.12.1"
multipart = "0.18.0"
nix = "0.28.0"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
serde-wasm-bindgen = "0.6.5"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "chrono"]}
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
valid = { version = "0.3.1", features = ["serde1"] }
wasmedge-sdk = "0.13.2"
wasm-bindgen = "0.2.92"

ao-scheduler-utils = { path = "../ao-scheduler-utils" }
ao-common = { path = "../ao-common" }
async-trait = "0.1.80"
sha2 = "0.10.8"
base64-url = "2.0.2"
jsonwebkey = "0.3.5"
rsa = "0.9.6"
bundlr-sdk = "0.5.0"
rand = "0.8.5"
bytes = "1.6.0"
